@startuml

class UserEntity{
private final Long id;
    private final String password;
    private final String email;
    private final RoleEntity role;
}
class MasterEntity extends UserEntity{
}
class CustomerEntity extends UserEntity {
          private final String name;
          private final String surname;
          private final AddressEntity address;
          private final String phoneNumber;
}
 class ManagerEntity extends UserEntity {
 }

 class ApplianceEntity {
     private final Long id;
     private final String name;
     private final String model;
     private final double price;
     private final ManufacturerEntity manufacturer;
     private final TypeEntity type;
 }

 class ElectricApplianceEntity extends ApplianceEntity {
     private final int powerConsumption;
 }

ApplianceDao <|.. ApplianceDaoImpl
OrderDao <|.. OrderDaoImpl
UserDao <|.. UserDaoImpl
GenericDao <|.. GenericDaoImpl

class ApplianceDaoImpl extends GenericDaoImpl{
}
class UserDaoImpl extends GenericDaoImpl{
}
class OrderDaoImpl extends GenericDaoImpl{
}
CustomerService <|.. CustomerServiceImpl
ManagerService <|.. ManagerServiceImpl
MasterService <|.. MasterServiceImpl
OrderService <|.. OrderServiceImpl


UserEntity *-- UserBuilder
CustomerEntity *-- CustomerBuilder
ManagerEntity *-- ManagerBuilder
MasterEntity *-- MasterBuilder

@enduml